# task-management-app-5

./: .gitconfig  .gitignore  .licrc  LICENSE  README.md  app.js  auth.js  index.html  licensebat-config.toml  pyproject.toml  sandbox.js  styles.css  tasks.js  tasks.json  wallet.js
.devcontainer/: devcontainer.json
