[tool.poetry]
name = "task-management-app"
version = "0.1.0"
description = "A web-based task management application with user authentication and authorization."
authors = ["Setland34 <setland34@example.com>"]
license = "MIT"
repository = "https://github.com/Setland34/task-management-app"
homepage = "https://setland34.github.io/task-management-app"
keywords = ["task management", "web application", "authentication", "authorization"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"
flask-login = "^0.5.0"
flask-wtf = "^0.15.1"
sqlalchemy = "^1.4.22"
alembic = "^1.6.5"
requests = "^2.25.1"
flask-cors = "^3.0.10"
flask-migrate = "^3.0.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-flask = "^1.2.0"
black = "^21.7b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry>=1.1.7"]
build-backend = "poetry.masonry.api"
